added dev branch

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
      <script src="assets/bower_components/angular-ui-indeterminate/dist/indeterminate.min.js"></script>
      <script src="assets/bower_components/angular-ui-uploader/dist/uploader.min.js"></script>
      <script src="assets/bower_components/angular-ui-utils/index.js"></script>
+     <script src="assets/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
      <!-- endbower -->
 
     <!-- injector:js -->
